--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@strapi/plugin-cloud": "4.15.5",
     "@strapi/plugin-i18n": "4.15.5",
     "@strapi/plugin-users-permissions": "4.15.5",
+    "@strapi/provider-upload-cloudinary": "^4.16.2",
     "@strapi/strapi": "4.15.5",
     "better-sqlite3": "8.6.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-netlify-deployments": "^2.0.2",
     "strapi-plugin-vercel-deploy": "^1.4.0",
     "styled-components": "5.3.3"
   },
